--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -1,9 +1,14 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-mdb-theme="dark">
+<html lang="{{ site.active_lang }}" data-mdb-theme="dark">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Produtos a vencer</title>
+  <meta name="description" content="{{ page.site_description }}" />
+  <title>{{ page.title }}</title>
+
+  <!-- Favicon -->
+  <!-- Icons made by Freepik from www.flaticon.com -->
+  <link rel="shortcut icon" href="/assets/img/favicon_colored.png" type="image/x-icon" />
 
   <!-- Progressive Web App Manifest -->
   <link rel="manifest" href="expiring_products.webmanifest" />
@@ -34,18 +39,18 @@
 
 <!-- https://fastbootstrap.com/docs/margin/-->
 <body class="m-4">
-  <a href="https://github.com/george-gca/expiring_products" class="github-corner" aria-label="View source on GitHub"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#fff; color:var(--mdb-surface-bg); position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"/><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"/></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+  <a href="https://github.com/george-gca/expiring_products" class="github-corner" aria-label="{{ page.view_on_github }}"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#fff; color:var(--mdb-surface-bg); position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"/><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"/></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
 
-  <h1>Produtos a vencer</h1>
+  <h1>{{ page.products_to_expire }}</h1>
   <ul class="nav nav-tabs" id="tabs" role="tablist">
     <li class="nav-item" role="presentation">
-      <button class="nav-link active" id="foods-tab" data-bs-toggle="tab" data-bs-target="#foods-tab-pane" type="button" role="tab" aria-controls="foods-tab-pane" aria-selected="true">Alimentos</button>
+      <button class="nav-link active" id="foods-tab" data-bs-toggle="tab" data-bs-target="#foods-tab-pane" type="button" role="tab" aria-controls="foods-tab-pane" aria-selected="true">{{ page.foods }}</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="medicines-tab" data-bs-toggle="tab" data-bs-target="#medicines-tab-pane" type="button" role="tab" aria-controls="medicines-tab-pane" aria-selected="false">Medicamentos</button>
+      <button class="nav-link" id="medicines-tab" data-bs-toggle="tab" data-bs-target="#medicines-tab-pane" type="button" role="tab" aria-controls="medicines-tab-pane" aria-selected="false">{{ page.medicines }}</button>
     </li>
     <li class="nav-item" role="presentation">
-      <button class="nav-link" id="options-tab" data-bs-toggle="tab" data-bs-target="#options-tab-pane" type="button" role="tab" aria-controls="options-tab-pane" aria-selected="false">Opções</button>
+      <button class="nav-link" id="options-tab" data-bs-toggle="tab" data-bs-target="#options-tab-pane" type="button" role="tab" aria-controls="options-tab-pane" aria-selected="false">{{ page.options }}</button>
     </li>
   </ul>
 
@@ -73,11 +78,11 @@
         <div class="row justify-content-start">
           <div class="col-6 col-sm-3">
             <input type="button" id="export-products-input" class="d-none"/>
-            <label for="export-products-input" class="btn">Exportar dados</label>
+            <label for="export-products-input" class="btn">{{ page.export_data }}</label>
           </div>
           <div class="col-6 col-sm-3 mt-2">
             <input type="file" id="import-products-input" accept=".json" class="d-none"/>
-            <label for="import-products-input" class="btn">Importar dados</label>
+            <label for="import-products-input" class="btn">{{ page.import_data }}</label>
           </div>
         </div>
       </div>
@@ -90,13 +95,13 @@
       <form>
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="edit-item-modal-title">Editar</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h1 class="modal-title fs-5" id="edit-item-modal-title"></h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{{ page.close }}"></button>
           </div>
 
           <div class="modal-body">
             <div class="mb-3">
-              <label for="basic-url" class="form-label">Itens abertos</label>
+              <label for="basic-url" class="form-label">{{ page.opened_items }}</label>
               <div class="input-group">
                 <button class="btn btn-outline-secondary" type="button" id="minus-1-opened-item" onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fa-solid fa-minus"></i></button>
                 <input type="number" class="form-control" min="0" value="0" id="opened-items" name="opened-items">
@@ -105,7 +110,7 @@
             </div>
 
             <div class="mb-3">
-              <label for="basic-url" class="form-label">Itens consumidos</label>
+              <label for="basic-url" class="form-label">{{ page.consumed_items }}</label>
               <div class="input-group">
                 <button class="btn btn-outline-secondary" type="button" id="minus-1-consumed-item" onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fa-solid fa-minus"></i></button>
                 <input type="number" class="form-control" min="0" value="0" id="consumed-items" name="consumed-items">
@@ -114,7 +119,7 @@
             </div>
 
             <div class="mb-3">
-              <label for="basic-url" class="form-label">Itens descartados</label>
+              <label for="basic-url" class="form-label">{{ page.discarded_items }}</label>
               <div class="input-group">
                 <button class="btn btn-outline-secondary" type="button" id="minus-1-discarded-item" onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fa-solid fa-minus"></i></button>
                 <input type="number" class="form-control" min="0" value="0" id="discarded-items" name="discarded-items">
@@ -138,30 +143,30 @@
       <form>
         <div class="modal-content">
           <div class="modal-header">
-            <h1 class="modal-title fs-5" id="add-item-modal-title">Adicionar item</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            <h1 class="modal-title fs-5" id="add-item-modal-title">{{ page.add_item }}</h1>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{{ page.close }}"></button>
           </div>
 
           <div class="modal-body">
             <div class="form-floating mb-3">
               <input class="form-control" list="datalistOptions" id="new-item-name" name="new-item-name" required>
               <datalist id="datalistOptions"></datalist>
-              <label for="new-item-name">Nome</label>
+              <label for="new-item-name">{{ page.item_name }}</label>
             </div>
 
             <div class="form-floating mb-3">
               <input type="number" min="0" class="form-control" id="new-item-quantity" name="new-item-quantity" required>
-              <label for="new-item-quantity">Quantidade</label>
+              <label for="new-item-quantity">{{ page.quantity }}</label>
             </div>
 
             <div class="form-floating mb-3">
               <input type="date" class="form-control" id="new-item-expiring-date" name="new-item-expiring-date" required>
-              <label for="new-item-expiring-date">Vence em</label>
+              <label for="new-item-expiring-date">{{ page.expire_in }}</label>
             </div>
 
             <div class="form-floating mb-3">
               <input type="number" min="0" class="form-control" id="new-item-duration" name="new-item-duration">
-              <label for="new-item-duration">Duração em dias (após aberto)</label>
+              <label for="new-item-duration">{{ page.duration }}</label>
             </div>
           </div>
 
@@ -184,7 +189,6 @@
   <script defer src="https://cdn.jsdelivr.net/npm/luxon@3.5.0/build/global/luxon.min.js" integrity="sha256-/TZdvWBQbZdgT95AgMF6nDLyjhe3QdOMpw4VLnkcgq4=" crossorigin="anonymous"></script>
 
   <!-- Custom scripts -->
-  <!-- <script src="idb-backup-and-restore.js" type="module"></script> -->
-  <script src="script.js" type="module"></script>
+  {% include script.liquid %}
 </body>
 </html>
