--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -16,25 +16,39 @@
 
   <!-- Font Awesome -->
   <link
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-  rel="stylesheet"
-  />
+    defer
+    rel="stylesheet"
+    href="{{ site.third_party_libraries.font-awesome.url.css }}"
+    integrity="{{ site.third_party_libraries.font-awesome.integrity.css }}"
+    crossorigin="anonymous"
+  >
 
   <!-- Google Fonts -->
   <link
-  href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
-  rel="stylesheet"
-  />
+    defer
+    rel="stylesheet"
+    type="text/css"
+    href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
+  >
 
   <!-- Bootstrap -->
   <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/slate/bootstrap.min.css" integrity="sha256-wiAh4n8qc/EvV4YhAjqU+bA9sW69vgGMP+LYATjdTj0=" crossorigin="anonymous"> -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  <link
+    defer
+    rel="stylesheet"
+    href="{{ site.third_party_libraries.bootstrap.url.css }}"
+    integrity="{{ site.third_party_libraries.bootstrap.integrity.css }}"
+    crossorigin="anonymous"
+  >
 
   <!-- MDB -->
   <link
-  href="https://cdn.jsdelivr.net/npm/mdb-ui-kit@8.0.0/css/mdb.min.css"
-  rel="stylesheet"
-  />
+    defer
+    rel="stylesheet"
+    href="{{ site.third_party_libraries.mdb.url.css }}"
+    integrity="{{ site.third_party_libraries.mdb.integrity.css }}"
+    crossorigin="anonymous"
+  >
 </head>
 
 <!-- https://fastbootstrap.com/docs/margin/-->
@@ -180,13 +194,36 @@
   </div>
 
   <!-- Bootstrap -->
-  <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script
+    defer
+    src="{{ site.third_party_libraries.bootstrap.url.js }}"
+    integrity="{{ site.third_party_libraries.bootstrap.integrity.js }}"
+    crossorigin="anonymous"
+  ></script>
+
+  <!-- Font Awesome -->
+  <script
+    defer
+    src="{{ site.third_party_libraries.font-awesome.url.js }}"
+    integrity="{{ site.third_party_libraries.font-awesome.integrity.js }}"
+    crossorigin="anonymous"
+  ></script>
 
   <!-- MDB -->
-  <script defer src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/8.0.0/mdb.umd.min.js" integrity="sha512-z2TpMCfA7shP7qK/58k3WvdKLCFthQVrsfq+qsOjtVzk6QRE5mYgs6rd8pjtbtuqZtOJt8Q/IGpacrteVcoUpA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script
+    defer
+    src="{{ site.third_party_libraries.mdb.url.js }}"
+    integrity="{{ site.third_party_libraries.mdb.integrity.js }}"
+    crossorigin="anonymous"
+  ></script>
 
   <!-- Luxon for working with dates and times -->
-  <script defer src="https://cdn.jsdelivr.net/npm/luxon@3.5.0/build/global/luxon.min.js" integrity="sha256-/TZdvWBQbZdgT95AgMF6nDLyjhe3QdOMpw4VLnkcgq4=" crossorigin="anonymous"></script>
+  <script
+    defer
+    src="{{ site.third_party_libraries.luxon.url.js }}"
+    integrity="{{ site.third_party_libraries.luxon.integrity.js }}"
+    crossorigin="anonymous"
+  ></script>
 
   <!-- Custom scripts -->
   {% include script.liquid %}
