--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -1,59 +1,12 @@
 <!DOCTYPE html>
 <html lang="{{ site.active_lang }}" data-mdb-theme="dark">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="{{ page.site_description }}" />
-  <title>{{ page.title }}</title>
-
-  <!-- Favicon -->
-  <!-- Icons made by Freepik from www.flaticon.com -->
-  <link rel="shortcut icon" href="/assets/img/favicon_colored.png" type="image/x-icon" />
-
-  <!-- Progressive Web App Manifest -->
-  <link rel="manifest" href="expiring_products.webmanifest" />
-  <!-- <link rel="apple-touch-icon" href="assets/img/brand/symbol/colored.png" /> -->
-
-  <!-- Font Awesome -->
-  <link
-    defer
-    rel="stylesheet"
-    href="{{ site.third_party_libraries.font-awesome.url.css }}"
-    integrity="{{ site.third_party_libraries.font-awesome.integrity.css }}"
-    crossorigin="anonymous"
-  >
-
-  <!-- Google Fonts -->
-  <link
-    defer
-    rel="stylesheet"
-    type="text/css"
-    href="{{ site.third_party_libraries.google_fonts.url.fonts }}"
-  >
-
-  <!-- Bootstrap -->
-  <!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/slate/bootstrap.min.css" integrity="sha256-wiAh4n8qc/EvV4YhAjqU+bA9sW69vgGMP+LYATjdTj0=" crossorigin="anonymous"> -->
-  <link
-    defer
-    rel="stylesheet"
-    href="{{ site.third_party_libraries.bootstrap.url.css }}"
-    integrity="{{ site.third_party_libraries.bootstrap.integrity.css }}"
-    crossorigin="anonymous"
-  >
-
-  <!-- MDB -->
-  <link
-    defer
-    rel="stylesheet"
-    href="{{ site.third_party_libraries.mdb.url.css }}"
-    integrity="{{ site.third_party_libraries.mdb.integrity.css }}"
-    crossorigin="anonymous"
-  >
+  {% include head.liquid %}
 </head>
 
 <!-- https://fastbootstrap.com/docs/margin/-->
 <body class="m-4">
-  <a href="https://github.com/george-gca/expiring_products" class="github-corner" aria-label="{{ page.view_on_github }}"><svg width="80" height="80" viewBox="0 0 250 250" style="fill:#fff; color:var(--mdb-surface-bg); position: absolute; top: 0; border: 0; right: 0;" aria-hidden="true"><path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"/><path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"/><path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"/></svg></a><style>.github-corner:hover .octo-arm{animation:octocat-wave 560ms ease-in-out}@keyframes octocat-wave{0%,100%{transform:rotate(0)}20%,60%{transform:rotate(-25deg)}40%,80%{transform:rotate(10deg)}}@media (max-width:500px){.github-corner:hover .octo-arm{animation:none}.github-corner .octo-arm{animation:octocat-wave 560ms ease-in-out}}</style>
+  {% include github_corner.liquid %}
 
   <h1>{{ page.products_to_expire }}</h1>
 
@@ -70,162 +23,15 @@
   </ul>
 
   <div class="tab-content" id="tabsContents">
-    <div class="tab-pane fade show active" id="foods-tab-pane" role="tabpanel" aria-labelledby="foods-tab" tabindex="0">
-      <ul class="list-group list-group-flush list-unstyled mt-3" id="foods-list"></ul>
-      <!-- Floating add item button -->
-      <div class="fixed-action-btn" style="height: 80px;">
-        <button class="btn btn-floating text-white btn-lg" aria-label="{{ page.add_item }}" style="background-color: #f44336;" data-bs-toggle="modal" data-bs-target="#add-item-modal">
-          <i class="fa-solid fa-plus"></i>
-        </button>
-      </div>
-    </div>
-
-    <div class="tab-pane fade" id="medicines-tab-pane" role="tabpanel" aria-labelledby="medicines-tab" tabindex="1">
-      <ul class="list-group list-group-flush list-unstyled mt-3" id="medicines-list"></ul>
-      <!-- Floating add item button -->
-      <div class="fixed-action-btn" style="height: 80px;">
-        <button class="btn btn-floating text-white btn-lg" aria-label="{{ page.add_item }}" style="background-color: #f44336;" data-bs-toggle="modal" data-bs-target="#add-item-modal">
-          <i class="fa-solid fa-plus"></i>
-        </button>
-      </div>
-    </div>
-
-    <div class="tab-pane fade" id="options-tab-pane" role="tabpanel" aria-labelledby="options-tab" tabindex="2">
-      <div class="row mt-3">
-        <div class="col-sm-12">
-          <input type="button" id="export-products-input" class="d-none"/>
-          <label for="export-products-input" class="btn">{{ page.export_data }}</label>
-          <input type="file" id="import-products-input" accept=".json" class="d-none"/>
-          <label for="import-products-input" class="btn">{{ page.import_data }}</label>
-        </div>
-      </div>
-
-    </div>
+    {% include foods_tab.liquid %}
+    {% include medicines_tab.liquid %}
+    {% include settings_tab.liquid %}
   </div>
 
-  <!-- Edit item modal -->
-  <div class="modal fade" id="edit-item-modal" tabindex="-1" aria-labelledby="edit-item-modal-title" aria-hidden="true">
-    <div class="modal-dialog">
-      <form>
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="edit-item-modal-title"></h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{{ page.close }}"></button>
-          </div>
+  {%  include edit_item_modal.liquid %}
+  {%  include add_item_modal.liquid %}
 
-          <div class="modal-body">
-            <div class="mb-3">
-              <label for="basic-url" class="form-label">{{ page.opened_items }}</label>
-              <div class="input-group">
-                <button class="btn btn-outline-secondary" type="button" id="minus-1-opened-item" onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fa-solid fa-minus"></i></button>
-                <input type="number" class="form-control" min="0" value="0" id="opened-items" name="opened-items">
-                <button class="btn btn-outline-secondary" type="button" id="plus-1-opened-item" onclick="this.parentNode.querySelector('input[type=number]').stepUp()"><i class="fa-solid fa-plus"></i></button>
-              </div>
-            </div>
-
-            <div class="mb-3">
-              <label for="basic-url" class="form-label">{{ page.consumed_items }}</label>
-              <div class="input-group">
-                <button class="btn btn-outline-secondary" type="button" id="minus-1-consumed-item" onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fa-solid fa-minus"></i></button>
-                <input type="number" class="form-control" min="0" value="0" id="consumed-items" name="consumed-items">
-                <button class="btn btn-outline-secondary" type="button" id="plus-1-consumed-item" onclick="this.parentNode.querySelector('input[type=number]').stepUp()"><i class="fa-solid fa-plus"></i></button>
-              </div>
-            </div>
-
-            <div class="mb-3">
-              <label for="basic-url" class="form-label">{{ page.discarded_items }}</label>
-              <div class="input-group">
-                <button class="btn btn-outline-secondary" type="button" id="minus-1-discarded-item" onclick="this.parentNode.querySelector('input[type=number]').stepDown()"><i class="fa-solid fa-minus"></i></button>
-                <input type="number" class="form-control" min="0" value="0" id="discarded-items" name="discarded-items">
-                <button class="btn btn-outline-secondary" type="button" id="plus-1-discarded-item" onclick="this.parentNode.querySelector('input[type=number]').stepUp()"><i class="fa-solid fa-plus"></i></button>
-              </div>
-            </div>
-          </div>
-
-          <div class="modal-footer">
-            <!-- TODO: remove data-bs-dismiss so it only closes if the form submition was successfull -->
-            <button type="submit" class="btn btn-primary" id="confirm-edit-button" data-bs-dismiss="modal"><i class="fa-solid fa-check"></i></button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <!-- Add item modal -->
-  <div class="modal fade" id="add-item-modal" tabindex="-1" aria-labelledby="add-item-modal-title" aria-hidden="true">
-    <div class="modal-dialog">
-      <form>
-        <div class="modal-content">
-          <div class="modal-header">
-            <h1 class="modal-title fs-5" id="add-item-modal-title">{{ page.add_item }}</h1>
-            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="{{ page.close }}"></button>
-          </div>
-
-          <div class="modal-body">
-            <div class="form-floating mb-3">
-              <input class="form-control" list="datalistOptions" id="new-item-name" name="new-item-name" required>
-              <datalist id="datalistOptions"></datalist>
-              <label for="new-item-name">{{ page.item_name }}</label>
-            </div>
-
-            <div class="form-floating mb-3">
-              <input type="number" min="0" class="form-control" id="new-item-quantity" name="new-item-quantity" required>
-              <label for="new-item-quantity">{{ page.quantity }}</label>
-            </div>
-
-            <div class="form-floating mb-3">
-              <input type="date" class="form-control" id="new-item-expiring-date" name="new-item-expiring-date" required>
-              <label for="new-item-expiring-date">{{ page.expire_in }}</label>
-            </div>
-
-            <div class="form-floating mb-3">
-              <input type="number" min="0" class="form-control" id="new-item-duration" name="new-item-duration">
-              <label for="new-item-duration">{{ page.duration }}</label>
-            </div>
-          </div>
-
-          <div class="modal-footer">
-            <!-- TODO: remove data-bs-dismiss so it only closes if the form submition was successfull -->
-            <button type="submit" class="btn btn-primary" data-bs-dismiss="modal"><i class="fa-solid fa-check"></i></button>
-          </div>
-        </div>
-      </form>
-    </div>
-  </div>
-
-  <!-- Bootstrap -->
-  <script
-    defer
-    src="{{ site.third_party_libraries.bootstrap.url.js }}"
-    integrity="{{ site.third_party_libraries.bootstrap.integrity.js }}"
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- Font Awesome -->
-  <script
-    defer
-    src="{{ site.third_party_libraries.font-awesome.url.js }}"
-    integrity="{{ site.third_party_libraries.font-awesome.integrity.js }}"
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- MDB -->
-  <script
-    defer
-    src="{{ site.third_party_libraries.mdb.url.js }}"
-    integrity="{{ site.third_party_libraries.mdb.integrity.js }}"
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- Luxon for working with dates and times -->
-  <script
-    defer
-    src="{{ site.third_party_libraries.luxon.url.js }}"
-    integrity="{{ site.third_party_libraries.luxon.integrity.js }}"
-    crossorigin="anonymous"
-  ></script>
-
-  <!-- Custom scripts -->
+  {% include external_scripts.liquid %}
   {% include script.liquid %}
 </body>
 </html>
