Created checkExpiryDateInList function
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/_includes/scripts/db.js.liquid
+++ b/_includes/scripts/db.js.liquid
@@ -223,7 +223,7 @@ function displayData(listElement, items, sortedItems, table) {
 
         // if there are no more cursor items to iterate through, say so
         console.log("All items from", table, "displayed");
-        checkExpiryDate();
+        checkExpiryDates();
       }
     }
   });
