Started implementing using firebase
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/_includes/external_scripts.liquid
+++ b/_includes/external_scripts.liquid
@@ -29,3 +29,22 @@
   integrity="{{ site.third_party_libraries.luxon.integrity.js }}"
   crossorigin="anonymous"
 ></script>
+
+<!-- Firebase -->
+<script
+  src="{{ site.third_party_libraries.firebase-app.url.js }}"
+  {% comment %} integrity="{{ site.third_party_libraries.firebase-app.integrity.js }}" {% endcomment %}
+  crossorigin="anonymous"
+></script>
+
+<script
+  src="{{ site.third_party_libraries.firebase-auth.url.js }}"
+  {% comment %} integrity="{{ site.third_party_libraries.firebase-auth.integrity.js }}" {% endcomment %}
+  crossorigin="anonymous"
+></script>
+
+<script
+  src="{{ site.third_party_libraries.firebase-firestore.url.js }}"
+  {% comment %} integrity="{{ site.third_party_libraries.firebase-firestore.integrity.js }}" {% endcomment %}
+  crossorigin="anonymous"
+></script>
