Finished basic implementation of using Firebase as db
Signed-off-by: George Araújo <george.gcac@gmail.com>

--- a/_includes/script.liquid
+++ b/_includes/script.liquid
@@ -1,23 +1,21 @@
 <script type="module">
-  // TODO: when adding or editing items, only update the list, don't reload the whole list
-
   import { clearDatabase, exportToJson, importFromJson } from '/assets/js/idb-backup-and-restore.mjs';
 
   var DateTime = luxon.DateTime;
   var Interval = luxon.Interval;
 
-  const FOODS_TABLE = "foods_os";
+  const FOODS_TABLE = "foods";
   const foodsListElement = document.getElementById('foods-list');
   let foodItems = {};
   let sortedFoodItems = [];
 
-  const MEDICINES_TABLE = "medicines_os";
+  const MEDICINES_TABLE = "medicines";
   const medicinesListElement = document.getElementById('medicines-list');
   let medicineItems = {};
   let sortedMedicineItems = [];
 
-  const FOODS_HISTORY_TABLE = "foods_history_os";
-  const MEDICINES_HISTORY_TABLE = "medicines_history_os";
+  const FOODS_HISTORY_TABLE = "foods_history";
+  const MEDICINES_HISTORY_TABLE = "medicines_history";
 
   const firebaseConfig = {
     apiKey: "{{ site.env.FIREBASE_API_KEY }}",
@@ -43,6 +41,7 @@
   const loginBtn = document.getElementById('login-btn');
   const signupBtn = document.getElementById('signup-btn');
   const logoutBtn = document.getElementById('logout-btn');
+  const forgotPasswordBtn = document.getElementById('forgot-password-btn');
 
   // Sign up new users
   signupBtn.addEventListener('click', e => {
@@ -51,7 +50,6 @@
     auth.createUserWithEmailAndPassword(email, password)
       .then(userCredential => {
         // Signed in
-        console.log('User signed up:', userCredential.user);
       })
       .catch(error => {
         alert(error.message);
@@ -65,9 +63,9 @@
     auth.signInWithEmailAndPassword(email, password)
       .then(userCredential => {
         // Signed in
-        console.log('User logged in:', userCredential.user);
       })
       .catch(error => {
+        console.error('Sign in error:', error);
         alert(error.message);
       });
   });
@@ -75,10 +73,31 @@
   // Logout user
   logoutBtn.addEventListener('click', e => {
     auth.signOut().then(() => {
-      console.log('User logged out');
+      // User logged out
     }).catch(error => {
+      console.error('Sign out error:', error);
       alert(error.message);
     });
+  });
+
+  // Handle forgot password
+  forgotPasswordBtn.addEventListener('click', () => {
+    const email = emailInput.value;
+    if (!email) {
+      alert('Please enter your email address in the email field.');
+      return;
+    }
+
+    auth.sendPasswordResetEmail(email)
+      .then(() => {
+        // Email sent.
+        alert('Password reset email sent! Please check your inbox.');
+      })
+      .catch((error) => {
+        // An error happened.
+        alert(error.message);
+        console.error('Error sending password reset email:', error);
+      });
   });
 
   auth.onAuthStateChanged(user => {
@@ -90,8 +109,8 @@
       logoutBtn.style.display = 'block';
 
       // Call the new real-time listeners instead of displayData
-      setupRealtimeListener(foodsListElement, foodItems, sortedFoodItems, 'foods');
-      setupRealtimeListener(medicinesListElement, medicineItems, sortedMedicineItems, 'medicines');
+      setupRealtimeListener(foodsListElement, sortedFoodItems, 'foods');
+      setupRealtimeListener(medicinesListElement, sortedMedicineItems, 'medicines');
     } else {
       currentUser = null;
       loginContainer.style.display = 'block';
@@ -101,29 +120,6 @@
     }
   });
 
-  {%  comment  %}
-  // import { clearDatabase, exportToJson, importFromJson } from '/assets/js/idb-backup-and-restore.mjs';
-
-  // var DateTime = luxon.DateTime;
-  // var Interval = luxon.Interval;
-
-  // const FOODS_TABLE = "foods_os";
-  // const foodsListElement = document.getElementById('foods-list');
-  // let foodItems = {};
-  // let sortedFoodItems = [];
-
-  // const MEDICINES_TABLE = "medicines_os";
-  // const medicinesListElement = document.getElementById('medicines-list');
-  // let medicineItems = {};
-  // let sortedMedicineItems = [];
-
-  // const FOODS_HISTORY_TABLE = "foods_history_os";
-  // const MEDICINES_HISTORY_TABLE = "medicines_history_os";
-
-  // // create an instance of a db object for us to store the open database in
-  // let db;
-
-  {% endcomment %}
   {% include scripts/ui.js.liquid %}
   {% include scripts/utils.js.liquid %}
   {% include scripts/db.js.liquid %}
