--- a/_includes/settings_tab.liquid
+++ b/_includes/settings_tab.liquid
@@ -5,6 +5,7 @@
       <label for="export-products-input" class="btn">{{ page.export_data }}</label>
       <input type="file" id="import-products-input" accept=".json" class="d-none"/>
       <label for="import-products-input" class="btn">{{ page.import_data }}</label>
+      <button id="logout-btn" class="btn btn-danger">{{ page.logout }}</button>
       {% include language_toggle.liquid %}
     </div>
   </div>
