--- a/_layouts/base.liquid
+++ b/_layouts/base.liquid
@@ -15,7 +15,8 @@
     <input type="password" id="password" placeholder="Password">
     <button id="login-btn">Login</button>
     <button id="signup-btn">Sign Up</button>
-    <button id="logout-btn" style="display:none;">Logout</button>
+    <button id="forgot-password-btn" class="btn btn-link">Forgot Password?</button>
+    {% comment %} <button id="logout-btn" style="display:none;">Logout</button> {% endcomment %}
   </div>
 
   <ul class="nav nav-tabs" id="tabs" role="tablist" style="display:none;">
