--- a/_includes/head.liquid
+++ b/_includes/head.liquid
@@ -44,3 +44,5 @@
   integrity="{{ site.third_party_libraries.mdb.integrity.css }}"
   crossorigin="anonymous"
 >
+
+<link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
