--- a/_includes/items_tab.liquid
+++ b/_includes/items_tab.liquid
@@ -1,5 +1,5 @@
-<div class="tab-pane fade show active" id="foods-tab-pane" role="tabpanel" aria-labelledby="foods-tab" tabindex="0">
-  <ul class="list-group list-group-flush list-unstyled mt-3" id="foods-list"></ul>
+<div class="tab-pane fade {%- if include.tab_index == 0 %} show active{% endif %}" id="{{ include.collection }}-tab-pane" role="tabpanel" aria-labelledby="{{ include.collection }}-tab" tabindex="{{ include.tab_index }}">
+  <ul class="list-group list-group-flush list-unstyled mt-3" id="{{ include.collection }}-list"></ul>
   <!-- Floating add item button -->
   <div class="fixed-action-btn" style="height: 80px;">
     <button class="btn btn-floating text-white btn-lg" aria-label="{{ page.add_item }}" style="background-color: #f44336;" data-bs-toggle="modal" data-bs-target="#add-item-modal">
